[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ev-test-tools"
version = "0.1.0"
description = "Tools to test or simulate components of an electric vehicle"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = ["openinverter", "electric vehicle", "can"]
authors = [{ name = "David J. Fiddes", email = "D.J@fiddes.net" }]
maintainers = [{ name = "David J. Fiddes", email = "D.J@fiddes.net" }]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["python-can", "pyside6>=6.7.0"]

[project.optional-dependencies]
dev = ["check-manifest", "flake8", "pre-commit"]
test = ["coverage", "pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/davefiddes/ev-test-tools/"
"Bug Reports" = "https://github.com/davefiddes/ev-test-tools/issues"
"Source" = "https://github.com/davefiddes/ev-test-tools/"

[project.scripts]
sbox-sim = "ev_test_tools.sbox_sim:main"
